--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <header>  <app-header (leftnavToggle)="leftnav.toggle()"  (rightnavToggle)="rightnav.toggle()"></app-header></header>
  <main> 
   <mat-drawer-container>    
-    <mat-drawer position="end" #rightnav>
+    <mat-drawer position="end" #rightnav mode="push">
       <app-aside-right></app-aside-right>
     </mat-drawer>
     <mat-drawer position="strat" #leftnav>
