--- a/src/app/dashboard/header/header.component.scss
+++ b/src/app/dashboard/header/header.component.scss
@@ -3,17 +3,25 @@
 }
 
 .logo {
-  height: 60px;
+  height: 56px;
   vertical-align: middle;
 }
 
 .main {
-  padding-right: 30px;
-
-
+  padding-right: 16px;
 }
 
-.bnt {
+button {
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+  vertical-align: bottom;    
+}
+
+.bnt {  
   animation-name: moveInLeft;
   animation-duration: 1s;
 }
@@ -23,13 +31,12 @@
   text-transform: uppercase;
   text-decoration: none;
   margin-right: 6px;
-  padding: 4px;
+  padding: 2px 6px;
   display: inline-block;
 }
 
 .icon {
-  vertical-align: bottom;
-  position: relative;
+  vertical-align: bottom;   
   transition: all .1s;
 }
 
@@ -37,14 +44,14 @@
   color: white;
 }
 
-.icon:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .6)
+.bnt:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, .6)
 }
 
-.icon:active {
+.bnt:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, .6)
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .6)
 }
 
 .awesome {
@@ -54,7 +61,7 @@
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(400px);
   }
 
   80% {
