add sakura link

--- a/src/app/announce/long-stay/long-stay.component.html
+++ b/src/app/announce/long-stay/long-stay.component.html
@@ -1,14 +1,18 @@
-   <div class="container">
-      <div class="content">
+<div class="container">
+    <div class="content">
         <div class="slogan">
-          <div class="article">
-            <h1>{{'long_stay.slogan'|translate}}</h1>
-          </div>
-          <div class="contain">
-            <P>{{'long_stay.contain1'|translate}} </P>
-            <p>{{'long_stay.contain2'|translate}}</p>
-            <!-- <button mat-button (click)="getPrice()">{{'long_stay.more_information'|translate}}</button>  -->
-          </div>
+            <div class="article">
+                <!-- <h1>{{'long_stay.slogan'|translate}}</h1> -->
+
+                <h1>武陵農場一年一度美的饗宴，漫步在粉紅色的幸福國度之中</h1>
+            </div>
+            <div class="contain">
+                <a class="bnt" href="http://www2.wuling-farm.com.tw/sakura/index.php">前往櫻花季專區</a>
+                <!-- <P>{{'long_stay.contain1'|translate}} </P> -->
+                <!-- <p>{{'long_stay.contain2'|translate}}</p>   -->
+                <!-- <button mat-button (click)="getPrice()">{{'long_stay.more_information'|translate}}</button> -->
+
+            </div>
         </div>
-      </div>
     </div>
+</div>
