change bus infomation

--- a/src/app/announce/long-stay/long-stay.component.html
+++ b/src/app/announce/long-stay/long-stay.component.html
@@ -6,7 +6,10 @@
 
                 <h1>武陵農場一年一度美的饗宴，漫步在粉紅色的幸福國度之中</h1>
             </div>
-            <div class="contain">
+            <div class="contain">       
+                    <a href="https://www.youtube.com/channel/UC_KFPblH8J64_VRwlgnGgqA"><img src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Ftea.jpg?alt=media&token=295ac044-4a1d-451d-a82c-a8ef648b221b" title="武陵農場-茶莊即時影像" width="200" height="120" /></a> --
+                    <a href="https://www.youtube.com/channel/UCd4Zu_qoltvans8rmo7Zjxg"><img src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Fcamp.jpg?alt=media&token=bc499891-bedb-48bf-851a-e71233d3699c" title="武陵農場-露營區即時影像" width="200" height="120" /></a> --<br>
+              
                 <a class="bnt" href="http://www2.wuling-farm.com.tw/sakura/index.php">前往櫻花季專區</a>
                 <!-- <P>{{'long_stay.contain1'|translate}} </P> -->
                 <!-- <p>{{'long_stay.contain2'|translate}}</p>   -->
