auto play the youtube live stream

--- a/src/app/real-time/camera/camera.component.html
+++ b/src/app/real-time/camera/camera.component.html
@@ -1,1 +1,2 @@
-<img class="camera" src="http://210.241.53.147/abs2mjpg/mjpg?camera=2&resolution=352x240&1517643179519" alt="Your browser does not support the video element.">
+<iframe class="camera" src="https://www.youtube.com/embed/live_stream?channel=UC9D6Uwn-6ySnjo4t4dbscZA&rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="camera" src="https://www.youtube.com/embed/live_stream?channel=UC_KFPblH8J64_VRwlgnGgqA&rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
